lib/queue-msg-macro/tests/union.stderr
error: queue-msg only supports Enum and Struct
 --> tests/union.rs:4:1
  |
4 | union Union {
  | ^^^^^
